[project]
name = "lttrpy"
version = "2024.3"

authors = [{name = "Said Sattarov", email = "said.sattarov@gmail.com"}]
maintainers = [{name = "Said Sattarov", email = "said.sattarov@gmail.com"}]

description = "A script to compare several users' watched films on Letterboxd, with ratings and likes"
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "lxml",
    "jinja2",
]

keywords = ["letterboxd", "films", "movies", "scraper"]
classifiers = ["Development Status :: 3 - Alpha",
               "License :: OSI Approved :: MIT License",
               "Environment :: Console",
               "Operating System :: OS Independent",
               "Programming Language :: Python",
               "Programming Language :: Python :: 3 :: Only",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://git.disroot.org/gallifreyan/lttrpy"

[project.optional-dependencies]
fast = ["uvloop; sys_platform=='linux' or sys_platform=='darwin'"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
lttrpy = "lttrpy:__main__:main"

[tool.mypy]
python_version = "3.11"
allow_redefinition = true
disable_error_code = ["no-redef",]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "E", "I", "C90", "W", "N", "ANN", "C4", "ASYNC", "ICN", "SIM", "R", "S", "EXE", "COM", "EM",]
ignore = ["ANN101", "ANN102", "ANN003",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
